[package]
name = "asetool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
asefile = "0.3.6"
clap = { version = "4.3", features = ["derive"] }
image = { version = "0.23", default-features = false, features = [ "png" ] }
